# MonkeyRenderer

./: .gitignore  CMakeLists.txt  bootstrap_path.json
Core/: CMakeLists.txt
Core/include/: CommonDef.hpp  Core.hpp  GlobalValue.hpp  Job.hpp  Phases.hpp
Core/include/Buffer/: Buffer.hpp
Core/include/Components/: CameraComponent.hpp  Components.hpp  GridComponent.hpp  InputComponents.hpp  RenderComponents.hpp  ShaderComp.hpp
Core/include/Components/Base/: Position.hpp
Core/include/Components/Model/: BaseModel.hpp  MeshComp.hpp  ModelComp.hpp  PBRModel.hpp
Core/include/Components/Renderer/: LightComp.hpp  RenderComp.hpp
Core/include/Components/Textures/: BaseTexture.hpp  PBRTexture.hpp  Texture.hpp  TextureEnum.hpp
Core/include/FileSystem/: File.hpp  FileSystem.md
Core/include/Graphics/: OpenGLApp.hpp  ShaderWorker.hpp  TextureWorker.hpp  WorkerInterface.hpp
Core/include/HardWare/: BufferCreator.hpp
Core/include/Marcos/: Marcos.hpp  SharedLibMarco.inl  assertMarco.inl  nspMarco.inl  sizeMarco.inl
Core/include/Modules/: CameraModule.hpp  FileWatcherModule.hpp  GridModule.hpp  Modules.hpp  PerFrameData.hpp  TransformModule.hpp
Core/include/Modules/ImGuiModule/: ImGuiComponentDraw.hpp  ImGuiRenderModule.hpp
Core/include/Patterns/: SingleTon.hpp
Core/include/Resources/: MeshLoader.hpp  ResourceLoader.hpp  ShaderLoader.hpp  TextureLoader.hpp
Core/include/assimp/: config.h
Core/include/utils/: FileUtils.hpp  Logger.hpp  StringUtils.hpp
Core/src/: Core.cpp
Core/src/Buffer/: Buffer.cpp
Core/src/Components/: ShaderComp.cpp  ShaderOperator.cpp  ShaderOperator.hpp
Core/src/FileSystem/: File.cpp
Core/src/Graphics/: OpenGLApp.cpp  ShaderWorker.cpp  TextureWorker.cpp
Core/src/HardWare/: BufferCreator.cpp
Core/src/Modules/: CameraModule.cpp  FileWatcherModule.cpp  GridModule.cpp  PerFrameData.cpp  TransformModule.cpp
Core/src/Resources/: MeshLoader.cpp  ResourceLoader.cpp  ShaderLoader.cpp  TextureLoader.cpp
Core/src/utils/: Imgui_Wrapper.cpp  Logger.cpp
ReadMe/: Buffer.md  Renderer.md
(+58 files in other folders)
